# web-emu

./: README.md
app/jni/src/: casioemu.cpp
app/jni/src/Ext/: SysDialog.cpp  vibration.cpp
web/: CMakeLists.txt  build.sh  build_all.bat  build_web.bat  manifest.json  run_build.bat  shell.html  sw.js
web/src/Platform/: WebBindings.cpp  WebPlatform.hpp
